--- a/eComSolution.Service/eComSolution.Service.csproj
+++ b/eComSolution.Service/eComSolution.Service.csproj
@@ -10,6 +10,11 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.13.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Catalog\Categories\" />
+    <Folder Include="Catalog\Products\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
