hoan thanh chuc nang GetUserById

--- a/eComSolution.ViewModel/eComSolution.ViewModel.csproj
+++ b/eComSolution.ViewModel/eComSolution.ViewModel.csproj
@@ -3,5 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\eComSolution.Data\eComSolution.Data.csproj" />
+  </ItemGroup>
 
 </Project>
