--- a/eComSolution.Data/appsettings.json
+++ b/eComSolution.Data/appsettings.json
@@ -1,5 +1,5 @@
 {
     "ConnectionStrings": {
-      "Default": "Server=DESKTOP-14CMCK7;Database=eComSolution;Trusted_Connection=True;"
+      "Default": "Server=DESKTOP-JNQOPS2;Database=eComSolution;Trusted_Connection=True;"
     }
 }
