hoan thanh chuc nang get all products paging

--- a/eComSolution.API/appsettings.json
+++ b/eComSolution.API/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-JNQOPS2;Database=eComSolution;Trusted_Connection=True;"
+    "Default": "Server=DESKTOP-14CMCK7;Database=eComSolution;Trusted_Connection=True;"
   }
 
 }
