--- a/eComSolution.ViewModel/eComSolution.ViewModel.csproj
+++ b/eComSolution.ViewModel/eComSolution.ViewModel.csproj
@@ -6,5 +6,9 @@
   <ItemGroup>
     <ProjectReference Include="..\eComSolution.Data\eComSolution.Data.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
 
 </Project>
