sua db table carts và shops

--- a/eComSolution.API/appsettings.json
+++ b/eComSolution.API/appsettings.json
@@ -8,11 +8,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=DESKTOP-14CMCK7;Database=eComSolution;Trusted_Connection=True;"
+    "Default": "Server=DESKTOP-JNQOPS2;Database=eComSolution;Trusted_Connection=True;"
   },
   "MyEmail":{
-    "EmailAddress" :"tuandang29042000@gmail.com",
-    "Password":"Ttuanruby290420gm"
+    "EmailAddress" :"quoctuan290420@gmail.com",
+    "Password":"Quoctuan123!"
   }
 
 }
