--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: '3.4'
 services:
   apigateway:
     image: ${DOCKER_REGISTRY-}apigateway
+    ports:
+      - "55000:80"
     build:
       context: .
       dockerfile: APIGateway/Dockerfile
@@ -11,6 +13,8 @@ services:
 
   authenapi:
     image: ${DOCKER_REGISTRY-}authenapi
+    ports:
+      - "55001:80"
     build:
       context: .
       dockerfile: AuthenAPI/Dockerfile
@@ -19,6 +23,8 @@ services:
 
   cartapi:
     image: ${DOCKER_REGISTRY-}cartapi
+    ports:
+      - "55002:80"
     build:
       context: .
       dockerfile: CartAPI/Dockerfile
@@ -27,6 +33,8 @@ services:
 
   productapi:
     image: ${DOCKER_REGISTRY-}productapi
+    ports:
+      - "55003:80"
     build:
       context: .
       dockerfile: ProductAPI/Dockerfile
@@ -35,6 +43,8 @@ services:
 
   shopapi:
     image: ${DOCKER_REGISTRY-}shopapi
+    ports:
+      - "55004:80"
     build:
       context: .
       dockerfile: ShopAPI/Dockerfile
@@ -43,6 +53,8 @@ services:
 
   userapi:
     image: ${DOCKER_REGISTRY-}userapi
+    ports:
+      - "55005:80"
     build:
       context: .
       dockerfile: UserAPI/Dockerfile
@@ -51,6 +63,8 @@ services:
 
   historyapi:
     image: ${DOCKER_REGISTRY-}historyapi
+    ports:
+      - "55006:80"
     build:
       context: .
       dockerfile: HistoryAPI/Dockerfile
@@ -59,6 +73,8 @@ services:
 
   orderapi:
     image: ${DOCKER_REGISTRY-}orderapi
+    ports:
+      - "55007:80"
     build:
       context: .
       dockerfile: OrdersAPI/Dockerfile
