--- a/UserAPI/appsettings.json
+++ b/UserAPI/appsettings.json
@@ -10,5 +10,9 @@
   "ConnectionStrings": {
     "Default": "Server=DESKTOP-14CMCK7;Database=eComSolution;Trusted_Connection=True;",
     "DockerSQL": "Server=ms-sql-server,1433;Database=eComSolution;User Id=sa;Password=Onepiece1810!;"
+  },
+  "MyEmail":{
+    "EmailAddress" :"quoctuan290420@gmail.com",
+    "Password":"Quoctuan123!"
   }
 }
